- Updated WinVNC project settings for Release configuration. - Updated .gitignore to ignore Release build directories.

--- a/winvnc/winvnc/winvnc.vcproj
+++ b/winvnc/winvnc/winvnc.vcproj
@@ -252,7 +252,7 @@
 				FavorSizeOrSpeed="1"
 				EnableFiberSafeOptimizations="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="..\omnithread,..,..\.."
+				AdditionalIncludeDirectories="..\bonjour,..\omnithread,..,..\.."
 				PreprocessorDefinitions="NDEBUG;__x86__;__WIN32__;WIN32;_WINDOWS;_WIN32_WINNT=0x501;XMD_H;_WINSTATIC;_VC80;_CRT_SECURE_NO_WARNINGS;_WIN32_IE=0x0600"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -448,7 +448,7 @@
 				FavorSizeOrSpeed="1"
 				EnableFiberSafeOptimizations="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="..\omnithread,..,..\.."
+				AdditionalIncludeDirectories="..\bonjour,..\omnithread,..,..\.."
 				PreprocessorDefinitions="NDEBUG;__x86__;__WIN32__;WIN32;_WINDOWS;_WIN32_WINNT=0x501;XMD_H;_WINSTATIC;_VC80;_CRT_SECURE_NO_WARNINGS;IPP"
 				StringPooling="true"
 				RuntimeLibrary="0"
