--- a/winvnc/winvnc/winvnc.rc
+++ b/winvnc/winvnc/winvnc.rc
@@ -54,7 +54,7 @@ IDR_FTPFRAMESTRCOMP_CLASS JAVACLASS               "res\\ftpframe$strcomp.class"
 
 IDD_TEXTCHAT_DLG DIALOGEX 0, 0, 308, 177
 STYLE DS_SETFONT | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_THICKFRAME
-CAPTION " Chat - Ultr@VNC"
+CAPTION " Chat - HippoVNC"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_INPUTAREA_EDIT,4,135,255,39,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | NOT WS_BORDER | WS_VSCROLL,WS_EX_STATICEDGE
@@ -69,7 +69,7 @@ END
 IDD_LIST_DLG DIALOGEX 0, 0, 164, 116
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
-CAPTION " List of Clients - UltraVNC"
+CAPTION " List of Clients - HippoVNC"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     LTEXT           " Currently Connected Clients :",IDC_STATIC,5,4,105,8
@@ -82,14 +82,14 @@ END
 
 IDD_ABOUT DIALOGEX 0, 0, 282, 158
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION " About WinVNC"
+CAPTION " About HippoVNC"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,8,135,54,16
     CONTROL         139,IDC_VNCLOGO,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_SUNKEN,7,5,53,46,WS_EX_TRANSPARENT
-    LTEXT           "UltraVNC Win32 Server 1.0.6.4",IDC_VERSION,73,5,195,11
-    LTEXT           "Copyright © 2002-2009 Ultr@VNC Team\nCopyright © 2001-2002 Sam - eSVNC \nCopyright © 1999-2002 Rudi D. V. - VdaccVNC \nCopyright © 2001 Harakan Software - PalmVNC\nCopyright © 1999-2002 Const. Kaplinsky - TightVNC \n",IDC_NAME,74,27,202,41
-    LTEXT           "For more Information and Links please visit: \nhttp://www.uvnc.com",IDC_WWW,74,135,141,19
+    LTEXT           "HippoVNC 0.2.0",IDC_VERSION,73,5,195,11
+    LTEXT           "Copyright © 2009 RoboHippo LLC\nCopyright © 2002-2009 Ultr@VNC Team\nCopyright © 2001-2002 Sam - eSVNC \nCopyright © 1999-2002 Rudi D. V. - VdaccVNC \nCopyright © 2001 Harakan Software - PalmVNC\nCopyright © 1999-2002 Const. Kaplinsky - TightVNC \n",IDC_NAME,74,27,202,41
+	LTEXT           "HippoVNC is derived from UltraVNC (http://uvnc.com).\nVisit http://hipporemote.com for news and updates.",IDC_WWW,74,135,200,19
     LTEXT           "Build:",IDC_BUILDTEXT,74,16,20,10
     LTEXT           "BuildTime",IDC_BUILDTIME,97,16,92,10
     LTEXT           "Copyright © 2002 RealVNC Ltd. - RealVNC\nCopyright © 1999-2002 Tridia Corporation - TridiaVNC \nCopyright © 1994-2001 AT&&T Laboratories Cambridge/Olivetti Research Ltd. - VNC",IDC_STATIC,74,67,203,32
@@ -126,7 +126,7 @@ END
 
 IDD_PROPERTIES DIALOGEX 0, 0, 224, 172
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
-CAPTION " Ultr@VNC Server Property Page"
+CAPTION " HippoVNC Properties Page"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Server Screen Updates Handling",IDC_UPDATE_BORDER,6,2,214,94
@@ -149,9 +149,9 @@ BEGIN
     PUSHBUTTON      "&Cancel",IDCANCEL,177,154,41,14
 END
 
-IDD_PROPERTIES1 DIALOGEX 0, 0, 390, 285
+IDD_PROPERTIES1 DIALOGEX 0, 0, 390, 248
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
-CAPTION " Ultr@VNC Server Property Page"
+CAPTION " HippoVNC Admin Properties Page"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Incoming Connections",IDC_CONNECT_BORDER,5,3,132,116,BS_LEFT
@@ -161,7 +161,8 @@ BEGIN
     EDITTEXT        IDC_DISPLAYNO,66,41,29,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Auto",IDC_AUTO_DISPLAY_NO,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,102,39,35,13
     CONTROL         "Ports",IDC_SPECPORT,"Button",BS_AUTORADIOBUTTON,11,54,30,10
-    RTEXT           "Main:",IDC_STATIC,45,55,18,8
+	RTEXT           "#:",IDC_STATIC,53,42,9,8
+	RTEXT           "Main:",IDC_STATIC,45,55,18,8
     EDITTEXT        IDC_PORTRFB,66,53,29,12,ES_AUTOHSCROLL
     CONTROL         "Auto",IDC_PORTNO_AUTO,"Button",BS_AUTORADIOBUTTON,101,54,31,9
     RTEXT           "Http:",IDC_STATIC,36,67,27,8
@@ -169,15 +170,15 @@ BEGIN
     CONTROL         "Enable JavaViewer (Http Connect)",IDC_CONNECT_HTTP,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,80,122,10
     CONTROL         "Allow Loopback Connections",IDC_ALLOWLOOPBACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,91,105,10
-    CONTROL         "LoopbackOnly",IDC_LOOPBACKONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,102,59,10
+    CONTROL         "Loopback Only",IDC_LOOPBACKONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,102,59,10
     GROUPBOX        "When Last Client Disconnects",IDC_LOCKSETTINGS,142,3,104,52,BS_LEFT
-    CONTROL         "Do Nothing",IDC_LOCKSETTING_NOTHING,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,146,15,80,12
-    CONTROL         "Lock Workstation (W2K)",IDC_LOCKSETTING_LOCK,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,146,26,96,13
-    CONTROL         "Logoff Workstation",IDC_LOCKSETTING_LOGOFF,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,146,39,80,11
+    CONTROL         "Do Nothing",IDC_LOCKSETTING_NOTHING,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,148,15,80,12
+    CONTROL         "Lock Workstation (W2K)",IDC_LOCKSETTING_LOCK,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,148,26,96,13
+    CONTROL         "Logoff Workstation",IDC_LOCKSETTING_LOGOFF,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,148,39,80,11
     GROUPBOX        "Keyboard && Mouse",IDC_STATIC,142,59,103,60,BS_LEFT
-    CONTROL         "Disable Viewers inputs",IDC_DISABLE_INPUTS,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,150,70,92,11
-    CONTROL         "Disable Local inputs",IDC_DISABLE_LOCAL_INPUTS,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,150,82,83,12
-    CONTROL         "Japanese",IDC_JAP_INPUTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,150,95,89,10
+    CONTROL         "Disable Viewers inputs",IDC_DISABLE_INPUTS,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,148,70,92,11
+    CONTROL         "Disable Local inputs",IDC_DISABLE_LOCAL_INPUTS,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,148,82,83,12
+    CONTROL         "Japanese",IDC_JAP_INPUTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,148,95,89,10
     GROUPBOX        "Query on incoming connection",IDC_STATIC,250,3,136,53,BS_LEFT
     CONTROL         "Display Query Window",IDQUERY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,257,15,86,10
     LTEXT           "Timeout:",IDC_STATIC,275,29,28,8
@@ -191,49 +192,48 @@ BEGIN
     CONTROL         "Keep existing connections",IDC_MV2,"Button",BS_AUTORADIOBUTTON,255,81,104,10
     CONTROL         "Refuse the new connection",IDC_MV3,"Button",BS_AUTORADIOBUTTON,255,92,103,9
     CONTROL         "Refuse all new connection ",IDC_MV4,"Button",BS_AUTORADIOBUTTON,255,103,102,10
-    GROUPBOX        "Authentication",IDC_STATIC,6,122,210,77,BS_LEFT
-    LTEXT           "VNC Password:",IDC_PASSWORD_LABEL,12,135,50,11,SS_CENTERIMAGE
-    EDITTEXT        IDC_PASSWORD,66,135,74,13,ES_PASSWORD | ES_AUTOHSCROLL
-    CONTROL         "Require MS Logon  (User/Pass./Domain)",IDC_MSLOGON_CHECKD,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,153,146,10
-    CONTROL         "New MS Logon (supports multiple domains)",IDC_NEW_MSLOGON,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,25,164,153,11
-    PUSHBUTTON      "Configure MS Logon Groups",IDC_MSLOGON,13,179,195,12
+    GROUPBOX        "Authentication",IDC_STATIC,6,122,210,30,BS_LEFT
+    LTEXT           "VNC Password:",IDC_PASSWORD_LABEL,12,133,50,11,SS_CENTERIMAGE
+    EDITTEXT        IDC_PASSWORD,66,133,74,13,ES_PASSWORD | ES_AUTOHSCROLL
+    //CONTROL         "Require MS Logon  (User/Pass./Domain)",IDC_MSLOGON_CHECKD,
+    //                "Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,153,146,10
+    //CONTROL         "New MS Logon (supports multiple domains)",IDC_NEW_MSLOGON,
+    //                "Button",BS_AUTOCHECKBOX | WS_TABSTOP,25,164,153,11
+    //PUSHBUTTON      "Configure MS Logon Groups",IDC_MSLOGON,13,179,195,12
     GROUPBOX        "Misc.",IDC_STATIC,221,122,165,106,BS_LEFT
-    CONTROL         "Remove Aero (Vista)",IDC_REMOVE_Aero,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,130,81,10
+    CONTROL         "Remove Aero (Vista)",IDC_REMOVE_Aero,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,227,133,81,10
     CONTROL         "Remove Wallpaper for Viewers",IDC_REMOVE_WALLPAPER,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,140,134,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,227,143,134,10
     CONTROL         "Enable Blank Monitor on Viewer Request",IDC_BLANK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,150,144,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,227,153,144,10
     CONTROL         "Enable Alpha-Blending Monitor Blanking",IDC_ALPHABLACK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,160,142,10
-    CONTROL         "Capture Alpha-Blending",IDC_ALPHA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,170,99,10
-    CONTROL         "DisableTrayIcon",IDC_DISABLETRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,180,67,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,227,163,142,10
+    CONTROL         "Capture Alpha-Blending",IDC_ALPHA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,227,173,99,10
+    CONTROL         "DisableTrayIcon",IDC_DISABLETRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,227,183,67,10
     CONTROL         "Disable clients options in tray icon menu",IDC_ALLOWEDITCLIENTS,
-                    "Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,228,190,141,10
+                    "Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,227,193,141,10
     CONTROL         "Forbid the user to close down WinVNC",IDC_ALLOWSHUTDOWN,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,228,200,143,10
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,227,200,143,10
     LTEXT           "Default Server Screen Scale:",IDC_STATIC,237,212,92,8
     LTEXT           "1 / ",IDC_STATIC,335,213,12,8
     EDITTEXT        IDC_SCALE,350,211,12,12,ES_AUTOHSCROLL
-    GROUPBOX        "File Transfer",IDC_STATIC,6,202,210,25
-    CONTROL         "Enable",IDC_FILETRANSFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,213,38,10
+    GROUPBOX        "File Transfer",IDC_STATIC,6,155,210,25
+    CONTROL         "Enable",IDC_FILETRANSFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,166,38,10
     CONTROL         "User impersonation (for Service only)",IDC_FTUSERIMPERSONATION_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,71,213,133,10
-    GROUPBOX        "DSM Plugin",IDC_STATIC,5,230,211,32,BS_LEFT
-    CONTROL         "Use :",IDC_PLUGIN_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,244,31,10
-    COMBOBOX        IDC_PLUGINS_COMBO,45,242,129,86,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Config.",IDC_PLUGIN_BUTTON,179,242,29,12
-    GROUPBOX        "Logging",IDC_STATIC,221,231,165,49
-    CONTROL         "Log debug infos to the WinVNC.log file",IDC_LOG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,240,139,10
-    CONTROL         "Log to video",IDC_VIDEO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,251,58,10
-    PUSHBUTTON      "Clear avi encoder",IDC_CLEAR,297,251,75,9
-    LTEXT           "Path:",IDC_STATIC,229,265,18,8
-    EDITTEXT        IDC_EDIT_PATH,250,263,133,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "&OK",IDOK,32,266,43,14
-    PUSHBUTTON      "&Apply",IDC_APPLY,81,266,43,14
-    PUSHBUTTON      "&Cancel",IDCANCEL,129,266,44,14
-    RTEXT           "N°",IDC_STATIC,53,42,9,8
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,71,166,133,10
+    //GROUPBOX        "DSM Plugin",IDC_STATIC,5,230,211,32,BS_LEFT
+    //CONTROL         "Use :",IDC_PLUGIN_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,244,31,10
+    //COMBOBOX        IDC_PLUGINS_COMBO,45,242,129,86,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    //PUSHBUTTON      "Config.",IDC_PLUGIN_BUTTON,179,242,29,12
+    GROUPBOX        "Logging",IDC_STATIC,6,183,210,45
+    CONTROL         "Log debug info to the WinVNC.log file",IDC_LOG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,195,139,10
+    //CONTROL         "Log to video",IDC_VIDEO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,251,58,10
+    //PUSHBUTTON      "Clear avi encoder",IDC_CLEAR,297,251,75,9
+    LTEXT           "Path:",IDC_STATIC,12,210,18,10
+    EDITTEXT        IDC_EDIT_PATH,32,208,175,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "&OK",IDOK,126,231,43,14
+    PUSHBUTTON      "&Apply",IDC_APPLY,175,231,43,14
+    PUSHBUTTON      "&Cancel",IDCANCEL,224,231,43,14
 END
 
 IDD_ABOUT1 DIALOGEX 0, 0, 286, 222
@@ -365,8 +365,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,6,4
- PRODUCTVERSION 1,0,6,4
+ FILEVERSION 0,2,0,0
+ //PRODUCTVERSION 1,0,6,4
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x2dL
@@ -381,17 +381,17 @@ BEGIN
     BEGIN
         BLOCK "000004b0"
         BEGIN
-            VALUE "Comments", "UltraVNC - Remote Control for all"
-            VALUE "CompanyName", "UltraVNC"
-            VALUE "FileDescription", "VNC server for Win32"
-            VALUE "FileVersion", "1.0.6.4"
-            VALUE "InternalName", "WinVNC"
-            VALUE "LegalCopyright", "Copyright © 2009 UltraVNC"
+            //VALUE "Comments", "UltraVNC - Remote Control for all"
+            VALUE "CompanyName", "RoboHippo LLC"
+            VALUE "FileDescription", "HippoVNC"
+            VALUE "FileVersion", "0.2.0.0"
+            VALUE "InternalName", "HippoVNC"
+            VALUE "LegalCopyright", "Copyright © 2009 RoboHippo LLC"
             VALUE "LegalTrademarks", "VNC"
-            VALUE "OriginalFilename", "WinVNC.exe"
-            VALUE "PrivateBuild", "1.0.6.4"
-            VALUE "ProductName", "UltraVNC"
-            VALUE "ProductVersion", "1.0.6.4"
+            VALUE "OriginalFilename", "HippoVNC.exe"
+            //VALUE "PrivateBuild", "1.0.6.4"
+            VALUE "ProductName", "HippoVNC"
+            VALUE "ProductVersion", "0.2.0"
         END
     END
     BLOCK "VarFileInfo"
@@ -410,15 +410,16 @@ IDR_TRAYMENU MENU
 BEGIN
     POPUP "tray"
     BEGIN
-        MENUITEM "&About WinVNC",               ID_ABOUT
+        MENUITEM "&About HippoVNC",             ID_ABOUT
         MENUITEM SEPARATOR
         MENUITEM "&Admin Properties",           ID_ADMIN_PROPERTIES
         MENUITEM "&Properties",                 ID_PROPERTIES
         MENUITEM SEPARATOR
-        MENUITEM "Add &New Client",             ID_OUTGOING_CONN
-        MENUITEM "&Kill All Clients",           ID_KILLCLIENTS
-        MENUITEM SEPARATOR
+        //MENUITEM "Add &New Client",             ID_OUTGOING_CONN
         MENUITEM "&List All Clients",           ID_LISTCLIENTS
+        MENUITEM "&Kill All Clients",           ID_KILLCLIENTS
+        //MENUITEM SEPARATOR
+        //MENUITEM "&List All Clients",           ID_LISTCLIENTS
         MENUITEM SEPARATOR
         MENUITEM "Install Service",             ID_RUNASSERVICE
         MENUITEM "Uninstall Service",           ID_UNINSTALL_SERVICE
